Bug 282901 - untranslatable strings in kbaccountlist.cpp
Summary: untranslatable strings in kbaccountlist.cpp
Status: RESOLVED FIXED
Alias: None
Product: kmymoney
Classification: Applications
Component: general (other bugs)
Version First Reported In: SVN
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: KMyMoney Devel Mailing List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-09-27 12:03 UTC by Burkhard Lück
Modified: 2011-10-02 12:29 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
change tr() to i18n() to enable message extraction (1.04 KB, patch)
2011-09-27 12:03 UTC, Burkhard Lück
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Burkhard Lück 2011-09-27 12:03:18 UTC
Created attachment 64007 [details]
change tr() to i18n() to enable message extraction

Version:           SVN trunk (using Devel) 
OS:                Linux

kbaccountlist.cpp has some untranslatable strings because tr() calls are used

Reproducible: Always

Steps to Reproduce:
Use Account Mapping dialog in KBanking

Actual Results:  
untranslated headers

Expected Results:  
translated headers
Comment 1 Thomas Baumgart 2011-09-28 18:28:03 UTC
SVN commit 1256115 by tbaumgart:

Removed unused code
Make strings translatable

Needs backport to stable branch

BUG: 282901

 M  +11 -68    kbaccountlist.cpp  
 M  +0 -2      kbaccountlist.h  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1256115
Comment 2 Cristian Oneț 2011-10-02 12:29:12 UTC
SVN commit 1256925 by conet:

Removed unused code
Make strings translatable

Backported to the stable branch.

BUG: 282901



 M  +11 -68    kbaccountlist.cpp  
 M  +0 -2      kbaccountlist.h  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1256925