Removed unused code Make strings translatable

Needs backport to stable branch

BUG: 282901

svn path=/trunk/extragear/office/kmymoney/; revision=1256115