kmymoney/plugins/kbanking/widgets/kbaccountlist.cpp
@@ -20,7 +20,7 @@
 #include "kbaccountlist.h"
 #include <assert.h>
 #include <QtCore/qstring.h>
-
+#include <klocale.h>
 
 
 KBAccountListViewItem::KBAccountListViewItem(KBAccountListView *parent,
@@ -32,18 +32,14 @@ KBAccountListViewItem::KBAccountListViewItem(KBAccountListView *parent,
   _populate();
 }
 
-
-
 KBAccountListViewItem::KBAccountListViewItem(const KBAccountListViewItem &item)
     : QTreeWidgetItem(item)
     , _account(0)
 {
-
   if (item._account) {
     _account = item._account;
   }
 }
-
 
 KBAccountListViewItem::KBAccountListViewItem(KBAccountListView *parent,
     QTreeWidgetItem *after,
@@ -55,19 +51,14 @@ KBAccountListViewItem::KBAccountListViewItem(KBAccountListView *parent,
   _populate();
 }
 
-
-
 KBAccountListViewItem::~KBAccountListViewItem()
 {
 }
-
-
 
 AB_ACCOUNT *KBAccountListViewItem::getAccount()
 {
   return _account;
 }
-
 
 void KBAccountListViewItem::_populate()
 {
@@ -87,7 +78,7 @@ void KBAccountListViewItem::_populate()
   // bank name
   tmp = AB_Account_GetBankName(_account);
   if (tmp.isEmpty())
-    tmp = "(unnamed)";
+    tmp = i18nc("replacement for institution or account w/o name", "(unnamed)");
   setText(i++, tmp);
 
   // account id
@@ -96,7 +87,7 @@ void KBAccountListViewItem::_populate()
   // account name
   tmp = QString::fromUtf8(AB_Account_GetAccountName(_account));
   if (tmp.isEmpty())
-    tmp = "(unnamed)";
+    tmp = i18nc("replacement for institution or account w/o name", "(unnamed)");
   setText(i++, tmp);
 
   tmp = QString::fromUtf8(AB_Account_GetOwnerName(_account));
@@ -106,9 +97,8 @@ void KBAccountListViewItem::_populate()
 
   tmp = QString::fromUtf8(AB_Provider_GetName(AB_Account_GetProvider(_account)));
   if (tmp.isEmpty())
-    tmp = "(unknown)";
+    tmp = i18nc("replacement for institution or account w/o name", "(unnamed)");
   setText(i++, tmp);
-
 }
 
 bool KBAccountListViewItem::operator< (const QTreeWidgetItem & other) const
@@ -122,64 +112,28 @@ bool KBAccountListViewItem::operator< (const QTreeWidgetItem & other) const
   return QTreeWidgetItem::operator<(other);
 }
 
-
-QString KBAccountListViewItem::key(int column, bool) const
-{
-  QString result;
-
-  if (column == 0) {
-    ulong i;
-    bool ok;
-
-    // id
-    i = text(column).toULong(&ok);
-    if (ok) {
-      char numbuf[32];
-
-      snprintf(numbuf, sizeof(numbuf), "%012lu", i);
-      result = QString(numbuf);
-    } else
-      result = text(column);
-  } else
-    result = text(column);
-
-  return result;
-}
-
-
-
-
-
-
-
-
-
 KBAccountListView::KBAccountListView(QWidget *parent)
     : QTreeWidget(parent)
 {
   setAllColumnsShowFocus(true);
   setColumnCount(7);
   QStringList header;
-  header << QWidget::tr("Id");
-  header << QWidget::tr("Institute Code");
-  header << QWidget::tr("Institute Name");
-  header << QWidget::tr("Account Number");
-  header << QWidget::tr("Account Name");
-  header << QWidget::tr("Owner");
-  header << QWidget::tr("Backend");
+  header << i18nc("Header for AqBanking account list", "Id");
+  header << i18nc("Header for AqBanking account list", "Institution Code");
+  header << i18nc("Header for AqBanking account list", "Institution Name");
+  header << i18nc("Header for AqBanking account list", "Account Number");
+  header << i18nc("Header for AqBanking account list", "Account Name");
+  header << i18nc("Header for AqBanking account list", "Owner");
+  header << i18nc("Header for AqBanking account list", "Backend");
   setHeaderLabels(header);
 
   setSortingEnabled(true);
   sortItems(0, Qt::AscendingOrder);
 }
 
-
-
 KBAccountListView::~KBAccountListView()
 {
 }
-
-
 
 void KBAccountListView::addAccount(AB_ACCOUNT *acc)
 {
@@ -187,8 +141,6 @@ void KBAccountListView::addAccount(AB_ACCOUNT *acc)
 
   entry = new KBAccountListViewItem(this, acc);
 }
-
-
 
 void KBAccountListView::addAccounts(const std::list<AB_ACCOUNT*> &accs)
 {
@@ -201,8 +153,6 @@ void KBAccountListView::addAccounts(const std::list<AB_ACCOUNT*> &accs)
   } /* for */
 }
 
-
-
 AB_ACCOUNT *KBAccountListView::getCurrentAccount()
 {
   KBAccountListViewItem *entry;
@@ -213,8 +163,6 @@ AB_ACCOUNT *KBAccountListView::getCurrentAccount()
   }
   return entry->getAccount();
 }
-
-
 
 std::list<AB_ACCOUNT*> KBAccountListView::getSelectedAccounts()
 {
@@ -235,8 +183,6 @@ std::list<AB_ACCOUNT*> KBAccountListView::getSelectedAccounts()
   return accs;
 }
 
-
-
 std::list<AB_ACCOUNT*> KBAccountListView::getSortedAccounts()
 {
   std::list<AB_ACCOUNT*> accs;
@@ -253,6 +199,3 @@ std::list<AB_ACCOUNT*> KBAccountListView::getSortedAccounts()
 
   return accs;
 }
-
-
-
